<resources>
    <string name="app_name">CharityApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_event">Event</string>
    <string name="title_emergency">Emergency</string>
    <string name="title_need_help">Need Help</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_donate">Donate</string>
    <string name="title_projects">Projects</string>
    <string name="profile">Profile</string>
    <string name="services">Services</string>
    <string name="donate">Donate</string>
    <string name="others">Others</string>
    <string name="faq">FAQ</string>
    <string name="title_financial_aids">Financial Aids</string>
    <string name="title_others">Others</string>

    <string name="blood_group_label">Blood Group</string>


    <string name="wilaya_label">Wilaya</string>
    <string name="title_details">Details</string>
    <string name="volunteer">Volunteer</string>
    <string name="contact">Contact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="dialogTitle">Change Profile Image</string>
    <string name="dialogDesc" />
    <string name="cancel">Cancel</string>
    <string name="import_">Import</string>
    <string name="description_example">description : Ehsan association has decided to launch this program that will benefit the wilaya of bejaia and speifically Amizour . people have been asking for it for so long because it would enhance their quality of life by a lot since they wont have to travel to Bejaia for health care services. we all know how generous algerian people are when it comes to helping others. Be one of them !</string>
    <string name="description">Description</string>
    <string name="enter_the_donation_amount">Enter the donation amount</string>
    <string name="paiment">Payment</string>
    <string name="donation_amount">Donation Amount</string>
    <string name="thank_you_for_your_support">Thank you for your support</string>
    <string name="pay_with_eddahabia">Pay with eddahabia</string>
    <string name="complete_paiment">Complete your payment</string>
<<<<<<< Updated upstream
    <string name="start">Start</string>
    <string name="notice_des">The need help section is made for those who has emergent situation , like : \n - Blood Need \n - Surgical Aids \n -Medecine need \n So if you are in such a situation don\'t hesitate to proceed with this section , you are going to fill a a form so that you situation will be treated by our professionals .</string>
    <string name="submit">Submit</string>
    <string name="policy">After setting up your goal you will be asked to agree on our terms in order to complete tour request here are some of our main terms of condition :
    -you will be receiving related phone calls
    -you will have to cooperate with us in order to help our team investigation to confirm your case
    -any false information given will result in a decline of you request</string>
    <string name="next">Next</string>
=======
    <string name="policy">After seting up your goal you will be asked to agree on our terms in order to complete tour request here are some of our main terms of condition :
    -you will be recieving related phone calls
    -you will have to cooperate with us in order to help our team investigation to confirm your case
    -any false information given will result in a decline of you request</string>
    <string name="FAQ">Ihsan is a mobile app designed to promote and faciliate charitable giving and social impact it typically provides user with the ability to make donations to various charitable causes,volunteer to non profitable works and helps people who are in need .The main goal of Ihsan is yo empower individuals to make a positive difference in the world by supporting causes they care about and helping those in need </string>
>>>>>>> Stashed changes



</resources>

