<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.charityapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_event"
            app:destination="@id/navigation_event" />
    </fragment>

    <fragment
        android:id="@+id/navigation_faq"
        android:name="com.example.charityapp.ui.faq.FaqFragment"
        android:label="@string/faq"
        tools:layout="@layout/fragment_faq" />

    <fragment
        android:id="@+id/navigation_event"
        android:name="com.example.charityapp.ui.event.EventFragment"
        android:label="@string/title_event"
        tools:layout="@layout/fragment_event" />
    <fragment
        android:id="@+id/navigation_emergency"
        android:name="com.example.charityapp.ui.emergency.EmergencyFragment"
        android:label="@string/title_emergency"
        tools:layout="@layout/fragment_emergency" />
    <fragment
        android:id="@+id/navigation_projects"
        android:name="com.example.charityapp.ui.projects.ProjectsFragment"
        android:label="@string/title_projects"
        tools:layout="@layout/fragment_projects" >
        <action
            android:id="@+id/action_navigation_projects_to_navigation_details"
            app:destination="@id/navigation_details" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.charityapp.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_donate"
        android:name="com.example.charityapp.ui.donate.DonateFragment"
        android:label="@string/title_donate"
        tools:layout="@layout/fragment_donate" />
    <fragment
        android:id="@+id/navigation_description"
        android:name="com.example.charityapp.ui.details.description.DescriptionFragment"
        android:label="@string/description"
        tools:layout="@layout/fragment_description" />

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.example.charityapp.ui.details.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details" >
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>
</navigation>